<resources>
    <string name="app_name" translatable="false">NextGenTrainer</string>
    <string name="java_entry_title" translatable="false">Start!</string>
    <string name="log" translatable="false">Fit Log</string>
    <string name="rep_counter" translatable="false">Rep Counter</string>
    <string name="improve" translatable="false">Improve</string>
    <string name="workout_plan" translatable="false">Plan</string>
    <string name="compete" translatable="false">Compete</string>
    <string name="challenge" translatable="false">Perform more squats in 30s. than your opponent and win!</string>
    <string name="instruction_up" translatable="false">Stop moving for 5 seconds to save the session (for squats)</string>
    <string name="instruction_down" translatable="false">If recording other movements, you need to click "SAVE"</string>
    <string name="ok" translatable="false">OK</string>
    <string name="permission_camera_rationale" translatable="false">Access to the camera is needed for detection</string>
    <string name="no_camera_permission" translatable="false">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error" translatable="false">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="toggle_turn_on" translatable="false">Front</string>
    <string name="toggle_turn_off" translatable="false">Back</string>
    <string name="desc_camera_source_activity" translatable="false">Vision detectors demo with live camera preview</string>
    <string name="desc_still_image_activity" translatable="false">Vision detectors demo with a still image</string>
    <string name="desc_camerax_live_preview_activity" translatable="false">Vision detectors demo with live preview using CameraX. Note that CameraX is only supported on API 21+</string>
    <string name="desc_pushups" translatable="false">Perfect your push-ups! Count repetitions, analise and improve your form. Master push-ups step by step.</string>
    <string name="desc_cameraxsource_demo_activity" translatable="false">Object detection with custom classifier using ML Kit CameraXSource API. Note that CameraX is only supported on API 21+</string>
    <string name="download_error" translatable="false">Download error</string>
    <string name="start_over" translatable="false">Start over</string>
    <string name="menu_item_settings" translatable="false">Settings</string>
    <string name="select_image" translatable="false">Select image</string>
    <string name="custom_object_detection" translatable="false">Custom Object Detector</string>
    <string name="requestIdToken" translatable="false">42094175930-2t0mqroj80o89jf4784ilson6f88mru4.apps.googleusercontent.com</string>
    <string name="pref_screen" translatable="false">ps</string>
    <string name="pref_screen_title_live_preview" translatable="false">Live preview settings</string>
    <string name="pref_screen_title_still_image" translatable="false">Still image settings</string>
    <string name="pref_screen_title_camerax_live_preview" translatable="false">CameraX live preview settings</string>
    <string name="pref_screen_title_cameraxsource_demo" translatable="false">CameraXSource live preview settings</string>
    <string name="pref_category_info" translatable="false">Detection Info</string>
    <string name="pref_category_face_detection" translatable="false">Face Detection</string>
    <string name="pref_category_object_detection" translatable="false">Object Detection / Custom Object Detection</string>
    <string name="pref_category_automl" translatable="false">AutoML Image Labeling</string>
    <string name="pref_category_pose_detection" translatable="false">Pose Detection</string>
    <string name="pref_category_segmentation" translatable="false">Selfie Segmentation</string>
    <string name="pref_category_text_recognition" translatable="false">Text Recognition</string>
    <string name="pref_category_key_camera" translatable="false">pckc</string>
    <string name="pref_category_title_camera" translatable="false">Camera</string>
    <string name="pref_key_rear_camera_preview_size" translatable="false">rcpvs</string>
    <string name="pref_key_rear_camera_picture_size" translatable="false">rcpts</string>
    <string name="pref_key_front_camera_preview_size" translatable="false">fcpvs</string>
    <string name="pref_key_front_camera_picture_size" translatable="false">fcpts</string>
    <string name="pref_key_camerax_rear_camera_target_resolution" translatable="false">crctas</string>
    <string name="pref_key_camerax_front_camera_target_resolution" translatable="false">cfctas</string>
    <string name="pref_key_camera_live_viewport" translatable="false">clv</string>
    <string name="pref_title_rear_camera_preview_size" translatable="false">Rear camera preview size</string>
    <string name="pref_title_front_camera_preview_size" translatable="false">Front camera preview size</string>
    <string name="pref_title_camerax_rear_camera_target_resolution" translatable="false">CameraX rear camera target resolution</string>
    <string name="pref_title_camerax_front_camera_target_resolution" translatable="false">CameraX front camera target resolution</string>
    <string name="pref_title_camera_live_viewport" translatable="false">Enable live viewport</string>
    <string name="pref_summary_camera_live_viewport" translatable="false">Do not block camera preview drawing on detection</string>
    <string name="pref_title_info_hide" translatable="false">Hide detection info</string>
    <string name="pref_key_info_hide" translatable="false">ih</string>
    <string name="pref_title_group_recognized_text_in_blocks" translatable="false">Group recognized text in paragraphs</string>
    <string name="pref_key_group_recognized_text_in_blocks" translatable="false">grtib</string>
    <string name="pref_title_show_language_tag" translatable="false">Show language identified</string>
    <string name="pref_key_show_language_tag" translatable="false">slt</string>
    <string name="pref_title_object_detector_enable_multiple_objects" translatable="false">Enable multiple objects</string>
    <string name="pref_key_live_preview_object_detector_enable_multiple_objects" translatable="false">lpodemo</string>
    <string name="pref_key_still_image_object_detector_enable_multiple_objects" translatable="false">siodemo</string>
    <string name="pref_title_object_detector_enable_classification" translatable="false">Enable classification</string>
    <string name="pref_key_live_preview_object_detector_enable_classification" translatable="false">lpodec</string>
    <string name="pref_key_still_image_object_detector_enable_classification" translatable="false">siodec</string>
    <string name="pref_title_face_detector_landmark_mode" translatable="false">Landmark mode</string>
    <string name="pref_key_live_preview_face_detection_landmark_mode" translatable="false">lpfdlm</string>
    <string name="pref_entries_face_detector_landmark_mode_no_landmarks" translatable="false">No landmarks</string>
    <string name="pref_entries_face_detector_landmark_mode_all_landmarks" translatable="false">All landmarks</string>
    <string name="pref_entry_values_face_detector_landmark_mode_no_landmarks" translatable="false">1</string>
    <string name="pref_entry_values_face_detector_landmark_mode_all_landmarks" translatable="false">2</string>
    <string name="pref_title_face_detector_contour_mode" translatable="false">Contour mode</string>
    <string name="pref_key_live_preview_face_detection_contour_mode" translatable="false">lpfdcm</string>
    <string name="pref_entries_face_detector_contour_mode_no_contours" translatable="false">No contours</string>
    <string name="pref_entries_face_detector_contour_mode_all_contours" translatable="false">All contours</string>
    <string name="pref_entry_values_face_detector_contour_mode_no_contours" translatable="false">1</string>
    <string name="pref_entry_values_face_detector_contour_mode_all_contours" translatable="false">2</string>
    <string name="pref_title_face_detector_classification_mode" translatable="false">Classification mode</string>
    <string name="pref_key_live_preview_face_detection_classification_mode" translatable="false">lpfdcfm</string>
    <string name="pref_entries_face_detector_classification_mode_no_classifications" translatable="false">No classifications</string>
    <string name="pref_entries_face_detector_classification_mode_all_classifications" translatable="false">All classifications</string>
    <string name="pref_entry_values_face_detector_classification_mode_no_classifications" translatable="false">1</string>
    <string name="pref_entry_values_face_detector_classification_mode_all_classifications" translatable="false">2</string>
    <string name="pref_title_face_detector_performance_mode" translatable="false">Performance mode</string>
    <string name="pref_key_live_preview_face_detection_performance_mode" translatable="false">lpfdpm</string>
    <string name="pref_entries_face_detector_performance_mode_fast" translatable="false">Fast</string>
    <string name="pref_entries_face_detector_performance_mode_accurate" translatable="false">Accurate</string>
    <string name="pref_entry_values_face_detector_performance_mode_fast" translatable="false">1</string>
    <string name="pref_entry_values_face_detector_performance_mode_accurate" translatable="false">2</string>
    <string name="pref_title_face_detector_face_tracking" translatable="false">Face tracking</string>
    <string name="pref_key_live_preview_face_detection_face_tracking" translatable="false">lpfdft</string>
    <string name="pref_title_face_detector_min_face_size" translatable="false">Minimum face size</string>
    <string name="pref_key_live_preview_face_detection_min_face_size" translatable="false">lpfdmfs</string>
    <string name="pref_dialog_message_face_detector_min_face_size" translatable="false">Proportion of the head width to the image width, and the valid value range is [0.0, 1.0]</string>
    <string name="pref_toast_invalid_min_face_size" translatable="false">Minimum face size must be a float value and in the range [0.0, 1.0]</string>
    <string name="pref_title_pose_detector_performance_mode" translatable="false">Performance mode</string>
    <string name="pref_key_live_preview_pose_detection_performance_mode" translatable="false">lppdpm</string>
    <string name="pref_key_still_image_pose_detection_performance_mode" translatable="false">sipdpm</string>
    <string name="pref_entries_pose_detector_performance_mode_fast" translatable="false">Fast</string>
    <string name="log_in_to">Login To <b>Get Started</b></string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forgot_password"><u><b>Forgot Password?</b></u></string>
    <string name="login">Login</string>
    <string name="or">or</string>
    <string name="sign_up">Don\'t have an account? <b>Sign up!</b></string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="hello_user">Hello, <b>User</b></string>
    <string name="already_prepared_to_work_out_let_s_go">Already prepared to work out? Let\'s go!</string>
    <string name="training">Training</string>
    <string name="nsb">notifications settings button</string>
    <string name="ready">Ready for a new challenge?</string>
    <string name="training_button">training button</string>
    <string name="flb">fit log button</string>
    <string name="cb">compete button</string>
    <string name="fitlog">FitLog</string>
    <string name="compete_text">Compete</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login_hint">Login</string>
</resources>